# somi

./: .gitignore  MIGRATION_MAP.md  README.md  START_HERE_WHAT_IS_THIS.md  pyproject.toml
docs/: ABSORB_EVERYTHING.md  ABSORPTION_THEORY_VS_IMPLEMENTED.md  API_SOURCE_MAP.md  AUDIT_INVENTORY.md  ROADMAP_ONE_MODEL_FOREVER.md  TARGET_ARCHITECTURE.md  THEORY_AHEAD_OF_CODE.md  USER_MANUAL_CODE.md  USER_MANUAL_THEORY.md
experiments/: __init__.py  absorb_all_models.py  absorb_and_grow.py  absorb_from_llm.py  absorb_results.json  demo.py  lossless_absorb_experiment.py  run_absorb_on_runpod.py  run_lossless_on_runpod.py  show_action_cascade.py  simulate_lifecycle.py  spectral_rank_analysis.py  test_all_features.py  test_e2e.py  test_growth.py  train_addition.py
somi/: __init__.py  aimo.py  checkpoint.py  config.py
somi/absorption/: __init__.py  alignment.py  distillation.py  fingerprint.py  from_huggingface.py  integrity.py  lossless.py  multi_model.py  pretrained_init.py  spectral_analysis.py  transplant.py  universal_absorber.py
somi/brain/: __init__.py  circuit_brain.py  part.py  system.py  white_matter.py
somi/compression/: __init__.py  adaptive.py  auto_compress.py  mass_precision.py  spectral_rank.py  stress_pruning.py  topological_quality.py
somi/diagnostics/: __init__.py  circuit.py  continuum.py  dashboard.py  gauge.py  neuroscience.py  pathology.py  quantum.py  singularity.py  spacetime.py  (+1 more)
theory/: 23_SOMI_LIFE_CYCLE.md  24_GROWTH_SOLVES_LOCAL_LEARNING.md  24_THE_5_LEVELS_COMPLETE_REFERENCE.md  SOMI_3_0_FROM_FIRST_PRINCIPLES.md  SYMBOL_GLOSSARY.md
(+32 files in other folders)
