[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "somi"
version = "0.1.0"
description = "Self-Organizing Models of Intelligence clean rebuild package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["somi*"]
